<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragments.UniversityFragment"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/personal_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/UniversityData"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" >

        <TextView
            android:id="@+id/personalData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="TextView"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/UniversityData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/university_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/universityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/university_name"
        app:layout_constraintStart_toStartOf="@id/UniversityData"
        app:layout_constraintEnd_toEndOf="@+id/UniversityData"
        app:layout_constraintTop_toBottomOf="@+id/UniversityData">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/specialization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/university_specialization"
        app:layout_constraintStart_toStartOf="@id/universityName"
        app:layout_constraintEnd_toEndOf="@+id/universityName"
        app:layout_constraintTop_toBottomOf="@+id/universityName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentNumber."
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/student_number"
        app:layout_constraintStart_toStartOf="@id/specialization"
        app:layout_constraintEnd_toEndOf="@+id/specialization"
        app:layout_constraintTop_toBottomOf="@+id/specialization">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/pink"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/studentNumber."
        app:layout_constraintStart_toStartOf="@+id/studentNumber."
        app:layout_constraintTop_toBottomOf="@+id/studentNumber." />


</androidx.constraintlayout.widget.ConstraintLayout>